syntax = "proto3";
option java_package = "com.devstudio.core.data";
option java_multiple_files = true;

message UserPreferences {
  bool isDarkMode = 1;
  Theme_proto theme = 2;
  int64 selected_Book_Id = 3;
  FilterType filterType = 4;
  string filterStartDate = 5;
  string filterEndDate = 6;
}
enum Theme_proto {
  SYSTEM_DEFAULT = 0;
  LIGHT = 1;
  DARK = 2;
}
enum FilterType {
  CURRENT_MONTH = 0;
  DATE_RANGE = 1;
  ALL = 2;
}
